fix video overlap issue

--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -9,7 +9,6 @@ section {
 .about-landing {
     position: relative;
 
-
     video {
         width: 100%;
         height: 100%;
@@ -122,11 +121,11 @@ section {
 
 .about-team-landing {
     position: relative;
-    width: 100vw;
+    height: 250px;
 
     video {
         width: 100%;
-        height: 250px;
+        height: inherit;
         position: absolute;
         object-fit: cover;
         filter: brightness(40%);
